# Hydro-Agent

./: .gitignore  LICENSE  README.md  data_manifest.json  environment.yml  pyproject.toml  requirements.txt
configs/: arm1_demo.json  hydro_bench_v0.1.yaml  hydro_bench_v0.2.yaml
docs/: DATA_ACCESS.md
fixtures/: manifest.json
fixtures/expected/: smap_arm1_match.json
fixtures/smap/: smap_l3_tiny.h5
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: run-bundle.json
frontend/public/bundles/: HB_0001.json  HB_0002.json  HB_0003.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentComparison.tsx  AgentTrace.tsx  Header.tsx  HydrologicPanel.tsx  LeakagePanel.tsx  MetricsBar.tsx  ProblemCard.tsx  StepTimeline.tsx  TabNav.tsx  TaskSwitcher.tsx
frontend/src/data/: demo.ts  tasks.ts
frontend/src/lib/: charts.ts  transform.ts
hydro_bench/: readiness.json  station_catalog.csv
hydro_bench/tasks/: HB_0001.json  HB_0002.json  HB_0003.json
scripts/: build_real_fixtures.py  download_demo.py  export_all_bundles.py  export_run_bundle.py  generate_station_tasks.py  make_report.py  run_hydro_bench.py
src/hydro_agent/: __init__.py  assimilation.py  cli.py  io.py  metrics.py  model.py  pipeline.py  qc.py  schema.py
src/hydro_agent/agent/: __init__.py  executor.py  planner.py  tool_registry.py  trajectory_logger.py
src/hydro_agent/benchmark/: __init__.py  leakage.py  runner.py  scorer.py  (+3 more)
tests/: test_benchmark.py  test_fixtures.py  test_qc_flags.py  test_schema.py  test_science.py  test_smap_reader.py
(+5 files in other folders)
