[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrologic-earth-agent"
version = "0.2.0"
description = "A reproducible soil-moisture retrieval and data-assimilation research MVP"
requires-python = ">=3.11"

[project.scripts]
hydro-agent = "hydro_agent.cli:main"
hydro-bench = "hydro_agent.benchmark.runner:main"
hydro-bench-suite = "hydro_agent.benchmark.suite:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
